# Neu

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: Copy.cmake  Macros.cmake
examples/: CMakeLists.txt
examples/and_op/: CMakeLists.txt  and_op.cpp
examples/fisher_iris/: CMakeLists.txt  fisher_iris.cpp
examples/interactive_SFML/: CMakeLists.txt  interactive.cpp
include/Neu/: Activators.h  CsvReader.h  Layer.h  Logger.h  NeuralNetwork.h
src/Neu/: Activators.cpp  CMakeLists.txt  CsvReader.cpp  Layer.cpp  Logger.cpp  NeuralNetwork.cpp
src/gui/: CMakeLists.txt  QtMainWindowClass.cpp  QtMainWindowClass.h  QtMainWindowClass.ui  main.cpp
test/: CMakeLists.txt  main.cpp
